# eyeLike

./: .gitignore  Readme.md  remake.sh
src/: CMakeLists.txt  dialer.cpp  dialer.h  eyegui.cpp  eyegui.h  main.cpp  sound.cpp  sound.h
